--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
     border: none;
     background-color: #F0E68C; /* Cor de fundo bege claro */
     border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 5px 5px 10px;
   }
   
   input[type="text"]:readonly {
