--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@ body {
   h1 {
     text-align: center;
     margin-bottom: 20px;
+    color: #f2ff04;
+    -webkit-text-stroke-width: 1.2px;
+    -webkit-text-stroke-color: #000;
   }
   
   form {
@@ -24,6 +27,7 @@ body {
   label {
     display: block;
     margin-bottom: 5px;
+
   }
   
   input[type="text"] {
